src/test/ui/typeck/issue-87181/tuple-field.stderr
error[E0609]: no field `0` on type `fn(char, u16) -> Foo {Foo}`
  --> $DIR/tuple-field.rs:12:15
   |
LL |     thing.bar.0;
   |               ^
   |
help: use parentheses to instantiate this tuple struct
   |
LL |     (thing.bar)(/* char */, /* u16 */).0;
   |     +         ++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
